<resources>
    <string name="app_name" translatable="false">Weatherya</string>
    <string name="weather_sunny">&#xf00d;</string>
    <string name="weather_clear_night">&#xf02e;</string>
    <string name="weather_foggy">&#xf014;</string>
    <string name="weather_cloudy">&#xf013;</string>
    <string name="weather_rainy">&#xf019;</string>
    <string name="weather_snowy">&#xf01b;</string>
    <string name="weather_thunder">&#xf01e;</string>
    <string name="weather_drizzle">&#xf01c;</string>
    <string name="wi_owm_200">&#xf01e;</string>
    <string name="wi_owm_201">&#xf01e;</string>
    <string name="wi_owm_202">&#xf01e;</string>
    <string name="wi_owm_210">&#xf016;</string>
    <string name="wi_owm_211">&#xf016;</string>
    <string name="wi_owm_212">&#xf016;</string>
    <string name="wi_owm_221">&#xf016;</string>
    <string name="wi_owm_230">&#xf01e;</string>
    <string name="wi_owm_231">&#xf01e;</string>
    <string name="wi_owm_232">&#xf01e;</string>
    <string name="wi_owm_300">&#xf01c;</string>
    <string name="wi_owm_301">&#xf01c;</string>
    <string name="wi_owm_302">&#xf019;</string>
    <string name="wi_owm_310">&#xf017;</string>
    <string name="wi_owm_311">&#xf019;</string>
    <string name="wi_owm_312">&#xf019;</string>
    <string name="wi_owm_313">&#xf01a;</string>
    <string name="wi_owm_314">&#xf019;</string>
    <string name="wi_owm_321">&#xf01c;</string>
    <string name="wi_owm_500">&#xf01c;</string>
    <string name="wi_owm_501">&#xf019;</string>
    <string name="wi_owm_502">&#xf019;</string>
    <string name="wi_owm_503">&#xf019;</string>
    <string name="wi_owm_504">&#xf019;</string>
    <string name="wi_owm_511">&#xf017;</string>
    <string name="wi_owm_520">&#xf01a;</string>
    <string name="wi_owm_521">&#xf01a;</string>
    <string name="wi_owm_522">&#xf01a;</string>
    <string name="wi_owm_531">&#xf01d;</string>
    <string name="wi_owm_600">&#xf01b;</string>
    <string name="wi_owm_601">&#xf01b;</string>
    <string name="wi_owm_602">&#xf0b5;</string>
    <string name="wi_owm_611">&#xf017;</string>
    <string name="wi_owm_612">&#xf017;</string>
    <string name="wi_owm_615">&#xf017;</string>
    <string name="wi_owm_616">&#xf017;</string>
    <string name="wi_owm_620">&#xf017;</string>
    <string name="wi_owm_621">&#xf01b;</string>
    <string name="wi_owm_622">&#xf01b;</string>
    <string name="wi_owm_701">&#xf01a;</string>
    <string name="wi_owm_711">&#xf062;</string>
    <string name="wi_owm_721">&#xf0b6;</string>
    <string name="wi_owm_731">&#xf063;</string>
    <string name="wi_owm_741">&#xf014;</string>
    <string name="wi_owm_761">&#xf063;</string>
    <string name="wi_owm_762">&#xf063;</string>
    <string name="wi_owm_771">&#xf011;</string>
    <string name="wi_owm_781">&#xf056;</string>
    <string name="wi_owm_800">&#xf00d;</string>
    <string name="wi_owm_801">&#xf011;</string>
    <string name="wi_owm_802">&#xf011;</string>
    <string name="wi_owm_803">&#xf012;</string>
    <string name="wi_owm_804">&#xf013;</string>
    <string name="wi_owm_900">&#xf056;</string>
    <string name="wi_owm_901">&#xf01d;</string>
    <string name="wi_owm_902">&#xf073;</string>
    <string name="wi_owm_903">&#xf076;</string>
    <string name="wi_owm_904">&#xf072;</string>
    <string name="wi_owm_905">&#xf021;</string>
    <string name="wi_owm_906">&#xf015;</string>
    <string name="wi_owm_957">&#xf050;</string>
    <string name="wi_owm_day_200">&#xf010;</string>
    <string name="wi_owm_day_201">&#xf010;</string>
    <string name="wi_owm_day_202">&#xf010;</string>
    <string name="wi_owm_day_210">&#xf005;</string>
    <string name="wi_owm_day_211">&#xf005;</string>
    <string name="wi_owm_day_212">&#xf005;</string>
    <string name="wi_owm_day_221">&#xf005;</string>
    <string name="wi_owm_day_230">&#xf010;</string>
    <string name="wi_owm_day_231">&#xf010;</string>
    <string name="wi_owm_day_232">&#xf010;</string>
    <string name="wi_owm_day_300">&#xf00b;</string>
    <string name="wi_owm_day_301">&#xf00b;</string>
    <string name="wi_owm_day_302">&#xf008;</string>
    <string name="wi_owm_day_310">&#xf008;</string>
    <string name="wi_owm_day_311">&#xf008;</string>
    <string name="wi_owm_day_312">&#xf008;</string>
    <string name="wi_owm_day_313">&#xf008;</string>
    <string name="wi_owm_day_314">&#xf008;</string>
    <string name="wi_owm_day_321">&#xf00b;</string>
    <string name="wi_owm_day_500">&#xf00b;</string>
    <string name="wi_owm_day_501">&#xf008;</string>
    <string name="wi_owm_day_502">&#xf008;</string>
    <string name="wi_owm_day_503">&#xf008;</string>
    <string name="wi_owm_day_504">&#xf008;</string>
    <string name="wi_owm_day_511">&#xf006;</string>
    <string name="wi_owm_day_520">&#xf009;</string>
    <string name="wi_owm_day_521">&#xf009;</string>
    <string name="wi_owm_day_522">&#xf009;</string>
    <string name="wi_owm_day_531">&#xf00e;</string>
    <string name="wi_owm_day_600">&#xf00a;</string>
    <string name="wi_owm_day_601">&#xf0b2;</string>
    <string name="wi_owm_day_602">&#xf00a;</string>
    <string name="wi_owm_day_611">&#xf006;</string>
    <string name="wi_owm_day_612">&#xf006;</string>
    <string name="wi_owm_day_615">&#xf006;</string>
    <string name="wi_owm_day_616">&#xf006;</string>
    <string name="wi_owm_day_620">&#xf006;</string>
    <string name="wi_owm_day_621">&#xf00a;</string>
    <string name="wi_owm_day_622">&#xf00a;</string>
    <string name="wi_owm_day_701">&#xf009;</string>
    <string name="wi_owm_day_711">&#xf062;</string>
    <string name="wi_owm_day_721">&#xf0b6;</string>
    <string name="wi_owm_day_731">&#xf063;</string>
    <string name="wi_owm_day_741">&#xf003;</string>
    <string name="wi_owm_day_761">&#xf063;</string>
    <string name="wi_owm_day_762">&#xf063;</string>
    <string name="wi_owm_day_771">&#xf000;</string>
    <string name="wi_owm_day_781">&#xf056;</string>
    <string name="wi_owm_day_800">&#xf00d;</string>
    <string name="wi_owm_day_801">&#xf000;</string>
    <string name="wi_owm_day_802">&#xf000;</string>
    <string name="wi_owm_day_803">&#xf000;</string>
    <string name="wi_owm_day_804">&#xf00c;</string>
    <string name="wi_owm_day_900">&#xf056;</string>
    <string name="wi_owm_day_901">&#xf00e;</string>
    <string name="wi_owm_day_902">&#xf073;</string>
    <string name="wi_owm_day_903">&#xf076;</string>
    <string name="wi_owm_day_904">&#xf072;</string>
    <string name="wi_owm_day_905" translatable="false">&#xf0c4;</string>
    <string name="wi_owm_day_906" translatable="false">&#xf004;</string>
    <string name="wi_owm_day_957" translatable="false">&#xf050;</string>
    <string name="wi_owm_night_200" translatable="false">&#xf02d;</string>
    <string name="wi_owm_night_201" translatable="false">&#xf02d;</string>
    <string name="wi_owm_night_202" translatable="false">&#xf02d;</string>
    <string name="wi_owm_night_210" translatable="false">&#xf025;</string>
    <string name="wi_owm_night_211" translatable="false">&#xf025;</string>
    <string name="wi_owm_night_212" translatable="false">&#xf025;</string>
    <string name="wi_owm_night_221" translatable="false">&#xf025;</string>
    <string name="wi_owm_night_230" translatable="false">&#xf02d;</string>
    <string name="wi_owm_night_231" translatable="false">&#xf02d;</string>
    <string name="wi_owm_night_232" translatable="false">&#xf02d;</string>
    <string name="wi_owm_night_300" translatable="false">&#xf02b;</string>
    <string name="wi_owm_night_301" translatable="false">&#xf02b;</string>
    <string name="wi_owm_night_302" translatable="false">&#xf028;</string>
    <string name="wi_owm_night_310" translatable="false">&#xf028;</string>
    <string name="wi_owm_night_311" translatable="false">&#xf028;</string>
    <string name="wi_owm_night_312" translatable="false">&#xf028;</string>
    <string name="wi_owm_night_313" translatable="false">&#xf028;</string>
    <string name="wi_owm_night_314" translatable="false">&#xf028;</string>
    <string name="wi_owm_night_321" translatable="false">&#xf02b;</string>
    <string name="wi_owm_night_500" translatable="false">&#xf02b;</string>
    <string name="wi_owm_night_501" translatable="false">&#xf028;</string>
    <string name="wi_owm_night_502" translatable="false">&#xf028;</string>
    <string name="wi_owm_night_503" translatable="false">&#xf028;</string>
    <string name="wi_owm_night_504" translatable="false">&#xf028;</string>
    <string name="wi_owm_night_511" translatable="false">&#xf026;</string>
    <string name="wi_owm_night_520" translatable="false">&#xf029;</string>
    <string name="wi_owm_night_521" translatable="false">&#xf029;</string>
    <string name="wi_owm_night_522" translatable="false">&#xf029;</string>
    <string name="wi_owm_night_531" translatable="false">&#xf02c;</string>
    <string name="wi_owm_night_600" translatable="false">&#xf02a;</string>
    <string name="wi_owm_night_601" translatable="false">&#xf0b4;</string>
    <string name="wi_owm_night_602" translatable="false">&#xf02a;</string>
    <string name="wi_owm_night_611" translatable="false">&#xf026;</string>
    <string name="wi_owm_night_612" translatable="false">&#xf026;</string>
    <string name="wi_owm_night_615" translatable="false">&#xf026;</string>
    <string name="wi_owm_night_616" translatable="false">&#xf026;</string>
    <string name="wi_owm_night_620" translatable="false">&#xf026;</string>
    <string name="wi_owm_night_621" translatable="false">&#xf02a;</string>
    <string name="wi_owm_night_622" translatable="false">&#xf02a;</string>
    <string name="wi_owm_night_701" translatable="false">&#xf029;</string>
    <string name="wi_owm_night_711" translatable="false">&#xf062;</string>
    <string name="wi_owm_night_721" translatable="false">&#xf0b6;</string>
    <string name="wi_owm_night_731" translatable="false">&#xf063;</string>
    <string name="wi_owm_night_741" translatable="false">&#xf04a;</string>
    <string name="wi_owm_night_761" translatable="false">&#xf063;</string>
    <string name="wi_owm_night_762" translatable="false">&#xf063;</string>
    <string name="wi_owm_night_771" translatable="false">&#xf022;</string>
    <string name="wi_owm_night_781" translatable="false">&#xf056;</string>
    <string name="wi_owm_night_800" translatable="false">&#xf02e;</string>
    <string name="wi_owm_night_801" translatable="false">&#xf022;</string>
    <string name="wi_owm_night_802" translatable="false">&#xf022;</string>
    <string name="wi_owm_night_803" translatable="false">&#xf022;</string>
    <string name="wi_owm_night_804" translatable="false">&#xf086;</string>
    <string name="wi_owm_night_900" translatable="false">&#xf056;</string>
    <string name="wi_owm_night_901" translatable="false">&#xf03a;</string>
    <string name="wi_owm_night_902" translatable="false">&#xf073;</string>
    <string name="wi_owm_night_903" translatable="false">&#xf076;</string>
    <string name="wi_owm_night_904" translatable="false">&#xf072;</string>
    <string name="wi_owm_night_905" translatable="false">&#xf021;</string>
    <string name="wi_owm_night_906" translatable="false">&#xf024;</string>
    <string name="wi_owm_night_957" translatable="false">&#xf050;</string>
    <string name="wi_thermometer" translatable="false">&#xf055;</string>
    <string name="wi_barometer">&#xf079;</string>
    <string name="wi_humidity">&#xf07a;</string>
    <string name="wi_windy">&#xf050;</string>
    <string name="wi_direction_north">&#xf058;</string>
    <string name="wi_direction_north_east">&#xf057;</string>
    <string name="wi_direction_east">&#xf04d;</string>
    <string name="settings_title_units">Units</string>
    <string name="settings_temperature">Temperature units</string>
    <string name="settings_speed">Speed units</string>
    <string name="settings_pressure">Pressure units</string>
    <string name="settings_title_user_extra">Other</string>
    <string name="settings_apiKey">API key</string>
</resources>